--- a/public/css/style.css
+++ b/public/css/style.css
@@ -27,6 +27,10 @@ html, body {
 body {
     font-family: 'Poppins', sans-serif;
     background: #f6f8fb;
+    transition: background-image 0.9s ease-in-out;    
+    background-repeat: no-repeat;
+    background-size: cover;      /* Изображение масштабируется так, чтобы полностью покрыть область */
+    background-position: center;  
     color: #333;
 }
 
@@ -104,10 +108,20 @@ footer {
     transition: all 0.3s ease;
 }
 
+.hero-content, 
+.features, 
+.features-cards  {
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.features, .hero, .about-intro, .about-card  {
+    background-color: rgba(255, 255, 255, 0.8); /* Белый цвет с 50% прозрачностью */
+}
+
 .about-intro {
     text-align: center;
     padding: 50px 20px;
-    background: white;
     width: 100%;
     box-sizing: border-box;
     opacity: 0;
@@ -135,7 +149,6 @@ footer {
 }
 
 .about-card {
-    background: white;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
