--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,18 +11,30 @@ html, body {
 }
 
 /* Кастомный скролл для Chrome, Edge и Safari */
+/* WebKit-браузеры */
 ::-webkit-scrollbar {
-    width: 8px;
-}
-
-::-webkit-scrollbar-track {
-    background: #f6f8fb;
-}
-
-::-webkit-scrollbar-thumb {
-    background: #1d1f23;
-    border-radius: 4px;
-}
+    width: 8px;  /* Для вертикальных скроллбаров */
+    height: 2px; /* Для горизонтальных скроллбаров */
+  }
+  
+  ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+  }
+  
+  /* Firefox */
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: #888 #f1f1f1;
+  }
 
 body {
     font-family: 'Poppins', sans-serif;
