--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,8 +39,8 @@ body {
     font-family: 'Poppins', sans-serif;
     background: #f6f8fb;
     transition: background-image 0.9s ease-in-out;    
-    background-repeat: no-repeat;
-    background-size: cover;      /* Изображение масштабируется так, чтобы полностью покрыть область */
+    /* background-repeat: no-repeat; */
+    /* background-size: cover;      Изображение масштабируется так, чтобы полностью покрыть область */
     background-position: center;  
     color: #333;
 }
