--- a/public/css/style.css
+++ b/public/css/style.css
@@ -199,7 +199,7 @@ footer {
     max-width: 600px; /* Максимальная ширина формы */
     margin: 0 auto; /* Центрирование формы */
     padding: 20px; /* Отступы внутри блока */
-    background-color: #f9f9f9; /* Фоновый цвет */
+    background-color: rgba(255, 255, 255, 0.8); /* Белый цвет с 50% прозрачностью */
     border-radius: 10px; /* Закругление углов */
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); /* Тень */
     box-sizing: border-box; /* Включение отступов и границ в общую ширину */
