--- a/public/css/style.css
+++ b/public/css/style.css
@@ -197,7 +197,7 @@ footer {
 }
 .contact {
     max-width: 600px; /* Максимальная ширина формы */
-    margin: 0 auto; /* Центрирование формы */
+    margin: 100px auto; /* Центрирование формы */
     padding: 20px; /* Отступы внутри блока */
     background-color: rgba(255, 255, 255, 0.8); /* Белый цвет с 50% прозрачностью */
     border-radius: 10px; /* Закругление углов */
