--- a/public/css/style.css
+++ b/public/css/style.css
@@ -121,7 +121,6 @@ footer {
     transition: all 0.3s ease;
 }
 
-.hero,
 .hero-content, 
 .features, 
 .features-cards,
@@ -318,7 +317,7 @@ footer {
         right: 0;
         width: 60%;
         height: 100vh;
-        background: #1d1f23;
+        background-color: rgba(22, 21, 21, 0.8);
         flex-direction: column;
         align-items: center;
         justify-content: center;
